# apparmor-language-server

./: README.md  pyproject.toml
.github/workflows/: build-and-test.yml  build-snap.yml
apparmor_language_server/: __init__.py  __main__.py  _text.py  completions.py  constants.py  diagnostics.py  docs.py  formatting.py  hover.py  indexer.py  lint.py  parser.py  server.py
snap/: snapcraft.yaml
tests/: conftest.py  test_completions.py  test_constants.py  test_diagnostics.py  test_formatting.py  test_hover.py  test_indexer.py  test_lint.py  test_parser.py  test_server.py
